# jig

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/: BRANCH_PROTECTION.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
jig/: __init__.py  __main__.py  app.py  main.py
jig/core/: app_context.py  background.py  data_store.py  session.py  signal.py  timeline.py  types.py
jig/io/: mcap_generator.py  mcap_reader.py
jig/panels/: base.py  chart_panel.py  image_panel.py  registry.py  viewer_3d.py
jig/sessions/: log_session.py
jig/shell/: dock_manager.py  layout.py  main_window.py  quick_plot_dialog.py  timeline_widget.py  topic_browser.py  variable_browser.py
jig_spike_qt/: __init__.py  chart_panel.py  mcap_generator.py  panel_shell.py
spike/jig_spike_qt/: __main__.py  data_store.py  image_panel.py  main.py  viewer_3d.py
tests/: test_data_store.py  test_timeline.py
